# KappaTools

cflow/: blackboard_generation.ml  causal.ml  cflow_handler.ml  cflow_handler.mli  compression_main.ml  dag.ml  kappa_instantiation.ml  story_json.ml  story_json.mli
core/cli/: dune
core/dataStructures/: dune
core/grammar/: dune
core/main/: KaSim.ml  dune
core/simulation/: dune
core/siteGraphs/: dune
core/term/: dune  pattern.ml
dataStructures/: mods.ml  mods.mli
models/test_suite/cflows/cflows_json/output/: cflow_Weakly_0.json.ref  cflow_Weakly_1.json.ref
models/test_suite/cflows/side-effects3/output/: trace.json.ref
simulation/: replay.ml  trace.ml  trace.mli
term/: instantiation.ml  instantiation.mli
